Implemented optional seed for data generation and selection of train, test and validation training sets.

--- a/work_logs.html
+++ b/work_logs.html
@@ -484,13 +484,643 @@ SUCCESS (Hagan 2-layer simple backprop)
     </li>
 
 
+    <h5 align=right>2016 apr 1</h5>
+    <table border=1>
+    <tr>
+        <th></th>
+        <th>Asking price</th>
+        <th>length_over_all_meters</th>
+        <th>width_meters</th>
+        <th>build_year</th>
+        <th>draft_meters</th>
+        <th>displaces_kgs</th>
+        <th>ballast_kgs</th>
+        <th>engine_build_year</th>
+        <th>jeanneau</th>
+        <th>None</th>
+        <th>contest</th>
+        <th>elan</th>
+        <th>dufour</th>
+        <th>hanse</th>
+        <th>etap</th>
+        <th>compromis</th>
+        <th>hallberg-rassy</th>
+        <th>dehler</th>
+        <th>victoire</th>
+        <th>beneteau</th>
+        <th>bavaria</th>
+    </tr>
+    <tr>
+        <td>Asking price</td>
+        <td>1.00</td>
+        <td>0.80</td>
+        <td>0.80</td>
+        <td>0.54</td>
+        <td>0.60</td>
+        <td>0.34</td>
+        <td>0.18</td>
+        <td>0.23</td>
+        <td>0.03</td>
+        <td>-0.10</td>
+        <td>0.02</td>
+        <td>0.02</td>
+        <td>-0.03</td>
+        <td>0.16</td>
+        <td>-0.08</td>
+        <td>-0.11</td>
+        <td>0.09</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>0.02</td>
+        <td>0.06</td>
+    </tr>
+    <tr>
+        <td>length_over_all_meters</td>
+        <td>0.80</td>
+        <td>1.00</td>
+        <td>0.91</td>
+        <td>0.28</td>
+        <td>0.70</td>
+        <td>0.45</td>
+        <td>0.18</td>
+        <td>0.09</td>
+        <td>0.06</td>
+        <td>-0.04</td>
+        <td>0.01</td>
+        <td>-0.02</td>
+        <td>-0.04</td>
+        <td>0.14</td>
+        <td>-0.12</td>
+        <td>-0.11</td>
+        <td>0.01</td>
+        <td>-0.06</td>
+        <td>-0.06</td>
+        <td>0.01</td>
+        <td>0.09</td>
+    </tr>
+    <tr>
+        <td>width_meters</td>
+        <td>0.80</td>
+        <td>0.91</td>
+        <td>1.00</td>
+        <td>0.40</td>
+        <td>0.68</td>
+        <td>0.44</td>
+        <td>0.19</td>
+        <td>0.12</td>
+        <td>0.10</td>
+        <td>-0.14</td>
+        <td>-0.01</td>
+        <td>0.01</td>
+        <td>0.01</td>
+        <td>0.18</td>
+        <td>-0.09</td>
+        <td>-0.08</td>
+        <td>0.01</td>
+        <td>-0.07</td>
+        <td>-0.08</td>
+        <td>0.04</td>
+        <td>0.13</td>
+    </tr>
+    <tr>
+        <td>build_year</td>
+        <td>0.54</td>
+        <td>0.28</td>
+        <td>0.40</td>
+        <td>1.00</td>
+        <td>0.32</td>
+        <td>0.05</td>
+        <td>0.05</td>
+        <td>0.34</td>
+        <td>0.13</td>
+        <td>-0.37</td>
+        <td>-0.04</td>
+        <td>0.11</td>
+        <td>0.07</td>
+        <td>0.25</td>
+        <td>-0.01</td>
+        <td>-0.05</td>
+        <td>-0.09</td>
+        <td>0.01</td>
+        <td>-0.05</td>
+        <td>0.12</td>
+        <td>0.24</td>
+    </tr>
+    <tr>
+        <td>draft_meters</td>
+        <td>0.60</td>
+        <td>0.70</td>
+        <td>0.68</td>
+        <td>0.32</td>
+        <td>1.00</td>
+        <td>0.30</td>
+        <td>0.16</td>
+        <td>0.11</td>
+        <td>0.03</td>
+        <td>-0.09</td>
+        <td>0.01</td>
+        <td>0.01</td>
+        <td>0.03</td>
+        <td>0.17</td>
+        <td>-0.11</td>
+        <td>-0.10</td>
+        <td>0.01</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>0.05</td>
+        <td>0.04</td>
+    </tr>
+    <tr>
+        <td>displaces_kgs</td>
+        <td>0.34</td>
+        <td>0.45</td>
+        <td>0.44</td>
+        <td>0.05</td>
+        <td>0.30</td>
+        <td>1.00</td>
+        <td>0.15</td>
+        <td>0.02</td>
+        <td>0.02</td>
+        <td>0.05</td>
+        <td>-0.04</td>
+        <td>-0.01</td>
+        <td>-0.05</td>
+        <td>0.15</td>
+        <td>-0.10</td>
+        <td>-0.03</td>
+        <td>0.04</td>
+        <td>-0.07</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+    </tr>
+    <tr>
+        <td>ballast_kgs</td>
+        <td>0.18</td>
+        <td>0.18</td>
+        <td>0.19</td>
+        <td>0.05</td>
+        <td>0.16</td>
+        <td>0.15</td>
+        <td>1.00</td>
+        <td>0.03</td>
+        <td>-0.06</td>
+        <td>0.04</td>
+        <td>0.04</td>
+        <td>-0.01</td>
+        <td>-0.07</td>
+        <td>0.03</td>
+        <td>-0.06</td>
+        <td>-0.02</td>
+        <td>0.03</td>
+        <td>-0.05</td>
+        <td>0.04</td>
+        <td>0.00</td>
+        <td>0.03</td>
+    </tr>
+    <tr>
+        <td>engine_build_year</td>
+        <td>0.23</td>
+        <td>0.09</td>
+        <td>0.12</td>
+        <td>0.34</td>
+        <td>0.11</td>
+        <td>0.02</td>
+        <td>0.03</td>
+        <td>1.00</td>
+        <td>0.02</td>
+        <td>-0.10</td>
+        <td>-0.07</td>
+        <td>0.01</td>
+        <td>0.05</td>
+        <td>0.06</td>
+        <td>0.01</td>
+        <td>-0.07</td>
+        <td>-0.03</td>
+        <td>-0.00</td>
+        <td>-0.01</td>
+        <td>0.05</td>
+        <td>0.12</td>
+    </tr>
+    <tr>
+        <td>jeanneau</td>
+        <td>0.03</td>
+        <td>0.06</td>
+        <td>0.10</td>
+        <td>0.13</td>
+        <td>0.03</td>
+        <td>0.02</td>
+        <td>-0.06</td>
+        <td>0.02</td>
+        <td>1.00</td>
+        <td>-0.29</td>
+        <td>-0.04</td>
+        <td>-0.04</td>
+        <td>-0.06</td>
+        <td>-0.07</td>
+        <td>-0.04</td>
+        <td>-0.04</td>
+        <td>-0.06</td>
+        <td>-0.06</td>
+        <td>-0.04</td>
+        <td>-0.07</td>
+        <td>-0.09</td>
+    </tr>
+    <tr>
+        <td>None</td>
+        <td>-0.10</td>
+        <td>-0.04</td>
+        <td>-0.14</td>
+        <td>-0.37</td>
+        <td>-0.09</td>
+        <td>0.05</td>
+        <td>0.04</td>
+        <td>-0.10</td>
+        <td>-0.29</td>
+        <td>1.00</td>
+        <td>-0.15</td>
+        <td>-0.14</td>
+        <td>-0.20</td>
+        <td>-0.24</td>
+        <td>-0.16</td>
+        <td>-0.13</td>
+        <td>-0.21</td>
+        <td>-0.20</td>
+        <td>-0.13</td>
+        <td>-0.25</td>
+        <td>-0.32</td>
+    </tr>
+    <tr>
+        <td>contest</td>
+        <td>0.02</td>
+        <td>0.01</td>
+        <td>-0.01</td>
+        <td>-0.04</td>
+        <td>0.01</td>
+        <td>-0.04</td>
+        <td>0.04</td>
+        <td>-0.07</td>
+        <td>-0.04</td>
+        <td>-0.15</td>
+        <td>1.00</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.04</td>
+        <td>-0.05</td>
+    </tr>
+    <tr>
+        <td>elan</td>
+        <td>0.02</td>
+        <td>-0.02</td>
+        <td>0.01</td>
+        <td>0.11</td>
+        <td>0.01</td>
+        <td>-0.01</td>
+        <td>-0.01</td>
+        <td>0.01</td>
+        <td>-0.04</td>
+        <td>-0.14</td>
+        <td>-0.02</td>
+        <td>1.00</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+    </tr>
+    <tr>
+        <td>dufour</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>0.01</td>
+        <td>0.07</td>
+        <td>0.03</td>
+        <td>-0.05</td>
+        <td>-0.07</td>
+        <td>0.05</td>
+        <td>-0.06</td>
+        <td>-0.20</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>1.00</td>
+        <td>-0.05</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>-0.04</td>
+        <td>-0.02</td>
+        <td>-0.05</td>
+        <td>-0.06</td>
+    </tr>
+    <tr>
+        <td>hanse</td>
+        <td>0.16</td>
+        <td>0.14</td>
+        <td>0.18</td>
+        <td>0.25</td>
+        <td>0.17</td>
+        <td>0.15</td>
+        <td>0.03</td>
+        <td>0.06</td>
+        <td>-0.07</td>
+        <td>-0.24</td>
+        <td>-0.04</td>
+        <td>-0.03</td>
+        <td>-0.05</td>
+        <td>1.00</td>
+        <td>-0.04</td>
+        <td>-0.03</td>
+        <td>-0.05</td>
+        <td>-0.05</td>
+        <td>-0.03</td>
+        <td>-0.06</td>
+        <td>-0.08</td>
+    </tr>
+    <tr>
+        <td>etap</td>
+        <td>-0.08</td>
+        <td>-0.12</td>
+        <td>-0.09</td>
+        <td>-0.01</td>
+        <td>-0.11</td>
+        <td>-0.10</td>
+        <td>-0.06</td>
+        <td>0.01</td>
+        <td>-0.04</td>
+        <td>-0.16</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>1.00</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.04</td>
+        <td>-0.05</td>
+    </tr>
+    <tr>
+        <td>compromis</td>
+        <td>-0.11</td>
+        <td>-0.11</td>
+        <td>-0.08</td>
+        <td>-0.05</td>
+        <td>-0.10</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.07</td>
+        <td>-0.04</td>
+        <td>-0.13</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>1.00</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+    </tr>
+    <tr>
+        <td>hallberg-rassy</td>
+        <td>0.09</td>
+        <td>0.01</td>
+        <td>0.01</td>
+        <td>-0.09</td>
+        <td>0.01</td>
+        <td>0.04</td>
+        <td>0.03</td>
+        <td>-0.03</td>
+        <td>-0.06</td>
+        <td>-0.21</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>-0.05</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>1.00</td>
+        <td>-0.04</td>
+        <td>-0.03</td>
+        <td>-0.05</td>
+        <td>-0.07</td>
+    </tr>
+    <tr>
+        <td>dehler</td>
+        <td>-0.03</td>
+        <td>-0.06</td>
+        <td>-0.07</td>
+        <td>0.01</td>
+        <td>-0.02</td>
+        <td>-0.07</td>
+        <td>-0.05</td>
+        <td>-0.00</td>
+        <td>-0.06</td>
+        <td>-0.20</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>-0.05</td>
+        <td>-0.03</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+        <td>1.00</td>
+        <td>-0.02</td>
+        <td>-0.05</td>
+        <td>-0.06</td>
+    </tr>
+    <tr>
+        <td>victoire</td>
+        <td>-0.03</td>
+        <td>-0.06</td>
+        <td>-0.08</td>
+        <td>-0.05</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>0.04</td>
+        <td>-0.01</td>
+        <td>-0.04</td>
+        <td>-0.13</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>-0.02</td>
+        <td>-0.03</td>
+        <td>-0.02</td>
+        <td>1.00</td>
+        <td>-0.03</td>
+        <td>-0.04</td>
+    </tr>
+    <tr>
+        <td>beneteau</td>
+        <td>0.02</td>
+        <td>0.01</td>
+        <td>0.04</td>
+        <td>0.12</td>
+        <td>0.05</td>
+        <td>-0.03</td>
+        <td>0.00</td>
+        <td>0.05</td>
+        <td>-0.07</td>
+        <td>-0.25</td>
+        <td>-0.04</td>
+        <td>-0.03</td>
+        <td>-0.05</td>
+        <td>-0.06</td>
+        <td>-0.04</td>
+        <td>-0.03</td>
+        <td>-0.05</td>
+        <td>-0.05</td>
+        <td>-0.03</td>
+        <td>1.00</td>
+        <td>-0.08</td>
+    </tr>
+    <tr>
+        <td>bavaria</td>
+        <td>0.06</td>
+        <td>0.09</td>
+        <td>0.13</td>
+        <td>0.24</td>
+        <td>0.04</td>
+        <td>-0.03</td>
+        <td>0.03</td>
+        <td>0.12</td>
+        <td>-0.09</td>
+        <td>-0.32</td>
+        <td>-0.05</td>
+        <td>-0.04</td>
+        <td>-0.06</td>
+        <td>-0.08</td>
+        <td>-0.05</td>
+        <td>-0.04</td>
+        <td>-0.07</td>
+        <td>-0.06</td>
+        <td>-0.04</td>
+        <td>-0.08</td>
+        <td>1.00</td>
+    </tr>
+</table>
+    
+    <h5 align=right>2016 apr </h5>
+    <h3>Questions regarding correlations etc.</h3>
+
+    Beta for all the boats data:
+    <pre>
+[[ 0.99301571]
+ [ 0.33353922]
+ [ 0.44715166]
+ [ 0.44391034]
+ [ 0.45203788]
+ [ 0.52133777]
+ [ 0.56872987]
+ [ 0.56885987]
+ [ 0.5244411 ]
+ [ 0.39308995]
+ [ 0.71169123]
+ [ 0.43653954]
+ [ 0.44180253]
+ [ 0.43119741]
+ [ 0.48379834]]
+    </pre>
+    
+    <table border=1>
+      <tr>
+        <td><b>Question</b></td>
+        <td>
+          Does the predictive power of a linear least squares regression get worse when including an additional feature, which
+          is correlated to the first feature.
+        </td>
+      </tr><tr>
+        <td><b>Description</b></td>
+        <td>
+          I think not, I think that this is only true, when there is not enough data. But at this moment I couldn't say how
+          to calculate "what is enough".
+        </td>
+      </tr><tr>
+        <td align=top><b>Observation</b></td>
+      <td>
+        Looks I was right:<br>
+        Including only the length gives a training std of 0.380 and a test std of 0.387. <br>
+        Including only the width gives a training std of 0.313 and a test std of 0.298. <br>
+        Including the length and width,
+        which are correlated by 0.8 (above), we get a training std of 0.308 and a test std of 0.294. <br>
+        So:
+        <ol>
+          <li>Including more information improves the interpolation</li>
+          <li>So somehow the width is a better indicator than the length ... ?</li>
+        </ol>
+      </td>
+      </tr><tr>
+        <td><b>When does the interpolation get worse when adding more features?</b></td>
+        <td>
+          First, let's understand some terms that are of potential interest:
+          <p>
+          <b>Colliding:</b><br>
+          Berkson's paradox. Example: Alex dates only men which are both nice and handsome. <i>Inside</i> Alex's pool,
+          there will be a negative correlation between handsomeness and niceness, while these features maybe be uncorrelated
+          in the global population.
+          <p>
+            For interpolating <i>within</i> the pool, this will not be a problem.
+          <p>
+            Outside the pool, it will be generalisation, and a test set will be needed to test generalisation.
+          <p>
+            <b>Counfounding:</b><br>
+            When in a regression analysis <tt>y = b1*x1 + b2*x2</tt> and both x1 and x2 are caused by z likes so:
+            <tt>x1 = c1*z</tt> and <tt>x2 = c2*z</tt>, then:
+            <ol>
+              <li>a (spurious) correlation between x1 and x2 will be observed, and</li>
+              <li>z is a "confounding" factor in the analysis.
+            </ol>
+          <p>
+            For the regression analysis, this will not be a problem, since we are after
+            the target variable, not after correlations between the features.
+          <p>
+            <b>Incidental cancellation:</b><br>
+            Here we regress like so: <tt>y = c1*x1</tt> and we find no correlation.<br>
+            However, x1 can still be a direct cause, if both y and x1 are caused by z like so:
+            <pre>
+              y = c1*x1 + c2*z
+              x1 = c3*z
+            </pre>
+            so that:
+            <pre>
+              y = c1*x1 + c2*z = c1*c3*z + c2*z
+            </pre>
+            so there will be no correlation between y and x, <b>even if it is a direct cause</b>!
+          <p>
+            This can be important for our extrapolating analysis, if we forget to include such a variable,
+            the regressor x1 will not (seem to) qualify as a predictor.
+            <br>
+          <p>
+            <b>Suppression:</b><br>
+            This happens in the case <tt>y = c*x</tt> and <tt>x = c1*u + c2*v</tt>. <br>
+            Here, for examplle, only the u part of x correlates with y.
+          <p>
+            You would have to include v also, to allow for a kind of "incidental cancellation" to take place.
+            and improve the interpolation.
+        <td>
+      </tr>
+</tr>
+</table>
 
 
 
 
 
-
-
-  
   <a name="bottom"></a>
   <a href="#top">Top</a>
